--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.idea/
+.vscode
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,4 +19,4 @@
 out
 *.env
 awesome-ci
-tests/github_env
+test/github_env
